# iree-kernel-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  configs.json  dev-requirements.txt  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements.txt  setup.py  setup.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml  pre-commit.yaml  publish_docker.yml  run_bench.yml  short_bench.yml  test_bench.yml  (+2 more)
attentionbench/: attention_bench.py  attention_utils.py  problems.py  wave_attention_utils.py
backend/: .gitignore  __init__.py  auth.py  clear_db.py  cli.py  event_loop.py  globals.py  listener.py  requirements.txt  run.py  server.py  test.py
common_tools/: get_dumps.py  instruction_count.py  kernel_stats.py  plot_roofline_percents.py  setup.py  verify.py
convbench/: conv_bench.py  conv_utils.py  miopen_conv2d_shapes.txt  problems.py  shark_conv.py  wave_conv_utils.py
dashboard/: package-lock.json  package.json
deploy/: deployment.yaml
docker/: Dockerfile
frontend/: attention_visualizer.py  kernel_visualizer.py  requirements.txt
gemmbench/: gemm_bench.py  gemm_utils.py  problems.py
hipblaslt/: CMakeLists.txt  gemm_benchmark.cpp
iree_kernel_benchmark/: base.py  bench.py  load_problems.py  test.py
miopen_conv_runner/: README.md  miopendriver_to_iree.py  shapes.txt
tests/: test_gemmbench_mlir_gen.py  test_match_lines.py  utils.py
third_party_backends/: torch_attention.py  torch_conv.py  triton_attention.py
turbine-ukernels/: .gitignore  README.md  attention.py  bench_attention.sh  bench_layer_norm.sh  layer_norm.py  requirements.txt  util.py
workflow_tests/: mock_bench.py  mock_tuning.py
(+2043 files in other folders)
